--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "api-automation",
   "version": "1.0.0",
-  "description": "Technical task - API test automation",
-  "private": true,
+  "description": "API test automation task",
+  "main": "index.js",
   "scripts": {
-    "test": "cypress run --spec \"cypress/e2e/apiTask.cy.js\""
+    "test": "cypress run --spec \"cypress/e2e/test.cy.js\" --browser chrome",
+    "cy:open": "cypress open"
   },
-  "keywords": [
-    "cypress",
-    "api-testing",
-    "automation"
-  ],
-  "author": "Candidate",
-  "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.6.0"
+    "cypress": "^13.17.0"
   }
 }
